Added 'getNonDefaultSchemas' method.